# my-project

./: .gitignore  .gitmessage.txt  README.md
20250201_demo_webapp/: .gitignore
20250202_deepseek/: .python-version  main.py
20250308_reversi/: README.md  package-lock.json  package.json
20250404_uv_test/: hash_test.py  mock.py  requirements.txt
20250410_test_mcp/: package-lock.json  package.json
20250501_awesome-app/: pyproject.toml
20250501_calory/: main.ipynb
20250502_port_adapter/: check_db.py  main.py
20250614_kalman/: create_video.py  kalman.py  vidualize_2d_kalman.py
20250616_comfyui/: comfyui_workflow  task_mapping.py  visualize_comfyui.py  your_workflow.json  your_workflow_2  your_workflow_2.json
20250703_restful-api-project/: README.md  requirements.txt
20250712_petstore_agent1/: README.md  README_plan.md  README_review.md  originl_README.md  設計review.md
20250720_fluentd/: fluent.conf
20250823_TDD_try/: class.md  money.py  pyproject.toml  test_modey.py
20250830_text2speach/: gcloud_tts_partial_regen_with_cache.py  text2script.py
20250903_TDD2/: xunit.py
20260209_クイズアプリ/: .env.example  .gitignore  docker-compose.yml
20260225_workout_daily/: .env.example  .gitignore  CLAUDE.md  README.md  requirements.txt
20260226_lifeclaw/: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
20260320_face_balance/: .gitignore  CLAUDE.md  README.md  docker-compose.yml
claude-driven-template/: .gitignore
codex-driven-template/: .gitignore  AGENTS.md  README.dev.md
feature-driven-template-codex/: .gitignore  AGENTS.md  (+1 more)
(+396 files in other folders)
