[project]
name = "awesome-app"
version = "0.1.0"
description = ""
authors = [
    {name = "kkkkodama10",email = "k.kodama.nj.2331@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "awesome_app", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
numpy = "^2.2.5"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
